--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -10,7 +10,7 @@
   jobs:
     code-quality:
       name: 'Code Quality Checks'
-      runs-on: [self-hosted, aws, us-east-2, m6a.large]
+      runs-on: [self-hosted, aws, us-east-2, m6a.2xlarge]
       steps:
         - name: 'Check out code'
           uses: actions/checkout@v3
@@ -29,7 +29,7 @@
 
     build-test:
       name: 'Build And Test'
-      runs-on: [self-hosted, aws, us-east-2, m6a.large]
+      runs-on: [self-hosted, aws, us-east-2, m6a.2xlarge]
       steps:
         - name: 'Check out code'
           uses: actions/checkout@v3
@@ -49,7 +49,7 @@
             docker stop k-rust-demo-${{ github.sha }}
     build-test-legacy:
       name: 'Build And Test the deprecated Mx semantics'
-      runs-on: [self-hosted, aws, us-east-2, m6a.large]
+      runs-on: [self-hosted, aws, us-east-2, m6a.2xlarge]
       steps:
         - name: 'Check out code'
           uses: actions/checkout@v3
